--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
 		"express": "^5.0.0-alpha.2",
-		"cors": "^2.8.1"
+		"multer": "^1.4.2"
 	},
 	"engines": {
 		"node": "4.4.5"
@@ -22,5 +24,21 @@
 		"hyperdev",
 		"express"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"@abhijithvijayan/eslint-config": "^2.5.6",
+		"@abhijithvijayan/eslint-config-airbnb": "^1.0.2",
+		"@typescript-eslint/eslint-plugin": "^4.6.0",
+		"@typescript-eslint/parser": "^4.6.0",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^7.12.1",
+		"eslint-config-prettier": "^6.15.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.21.5",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"prettier": "^2.1.2"
+	}
 }
